--- a/views/index.ejs
+++ b/views/index.ejs
@@ -153,7 +153,7 @@
                             <div class="row">
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/necklace.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/about/necklace.jpg" alt="" /></a>
                                         <!-- <header>
                                             <h3>1</h3>
                                         </header> -->
@@ -167,7 +167,7 @@
                                 </div>
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/pandora.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/about/pandora.jpg" alt="" /></a>
                                         <!-- <header>
                                             <h3>3</h3>
                                         </header> -->
@@ -181,7 +181,7 @@
                                 </div>
                                 <div class="4u$ 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/angelica.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/about/angelica.jpg" alt="" /></a>
                                         <!-- <header>
                                             <h3>Dolor Penatibus</h3>
                                         </header> -->
