--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
                                 <li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-info-circle">About</span></a></li>
                                 <li><a href="#bridal" id="bridal-link" class="skel-layers-ignoreHref"><span class="icon fa-diamond">Bridal</span></a></li>
                                 <li><a href="#designers" id="designers-link" class="skel-layers-ignoreHref"><span class="icon fa-users">Designers</span></a></li>
-                                <li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
+                                <!-- <li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li> -->
                             </ul>
                         </nav>
 
@@ -317,7 +317,7 @@
                     </section>
 
                 <!-- Contact -->
-                    <section id="contact" class="four">
+                    <!-- <section id="contact" class="four">
                         <div class="container">
 
                             <header>
@@ -343,7 +343,7 @@
                             </form>
 
                         </div>
-                    </section>
+                    </section> -->
 
             </div>
 
