starting to add newer images

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,10 +203,10 @@
                         <div class="container">
 
                             <header>
-                                <h2>Bridal</h2>
+                                <h2 class="different-font">Bridal</h2>
                             </header>
 
-                            <a href="#" class="image featured"><img src="images/bridal/wedding_ring.jpg" alt="" /></a>
+                            <a href="#" class="image featured"><img src="images/selected-images/jelly-bean-ring.jpg" alt="" /></a>
 
                             <p>We offer a large variety of engagement rings and wedding bands.  Check out our sneak peek of photos then stop in today to view our extensive collection!</p>
                             <div class="row">
@@ -256,7 +256,7 @@
                         </div>
                     </section>
 
-                <!-- Bridal -->
+                <!-- Designers -->
                     <section id="designers" class="three">
                         <div class="container">
 
