put in new images

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -153,7 +153,7 @@
                             <div class="row">
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/about/necklace.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/selected-images/stack-of-rings.jpg" alt="" /></a>
                                         <!-- <header>
                                             <h3>1</h3>
                                         </header> -->
@@ -167,7 +167,7 @@
                                 </div>
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/about/pandora.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/selected-images/clover-necklace.jpg" alt="" /></a>
                                         <!-- <header>
                                             <h3>3</h3>
                                         </header> -->
@@ -181,7 +181,7 @@
                                 </div>
                                 <div class="4u$ 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/about/angelica.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/selected-images/many-bracelets.jpeg" alt="" /></a>
                                         <!-- <header>
                                             <h3>Dolor Penatibus</h3>
                                         </header> -->
@@ -206,13 +206,13 @@
                                 <h2 class="different-font">Bridal</h2>
                             </header>
 
-                            <a href="#" class="image featured"><img src="images/selected-images/jelly-bean-ring.jpg" alt="" /></a>
+                            <a href="#" class="image featured"><img src="images/selected-images/double-band-ring.jpg" alt="" /></a>
 
                             <p>We offer a large variety of engagement rings and wedding bands.  Check out our sneak peek of photos then stop in today to view our extensive collection!</p>
                             <div class="row">
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/bridal/top_view_ring.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/selected-images/hurricane-ring.jpeg" alt="" /></a>
                                         <!-- <header>
                                             <h3>1</h3>
                                         </header> -->
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/bridal/side_view_ring.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/selected-images/jelly-bean-ring.jpg" alt="" /></a>
                                         <!-- <header>
                                             <h3>3</h3>
                                         </header> -->
@@ -240,7 +240,7 @@
                                 </div>
                                 <div class="4u$ 12u$(mobile)">
                                     <article class="item">
-                                        <a class="image fit"><img src="images/bridal/groom_ring.jpg" alt="" /></a>
+                                        <a class="image fit"><img src="images/selected-images/large-diamond.jpeg" alt="" /></a>
                                         <!-- <header>
                                             <h3>Dolor Penatibus</h3>
                                         </header> -->
