--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-        <!-- <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'> -->
-        <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Ruthie' rel='stylesheet' type='text/css'>
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
         <link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" href="assets/css/custom.css" />
@@ -63,11 +60,7 @@
 
                     <!-- Social Icons -->
                         <ul class="icons">
-                            <!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
                             <li class="facebook-icon"><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" target="_blank" class="icon fa-facebook-official fa-lg"><span class="label">Facebook</span></a></li>
-                            <!-- <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li> -->
-                            <!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-                            <!-- <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li> -->
                         </ul>
 
                 </div>
@@ -86,9 +79,6 @@
                             <header class="cover">
                                 <h1 class="cursive" id="title">Anne-Marie's</h1>
                                 <h4 id="title">Fine Jewelry</h4>
-                                <!-- <h2 class="alt lobster">Anne-Marie's Fine Jewelry</h2> -->
-                                <!-- <p>Anne-Marie's is Stark County's original Pandora dealer, since 2001.<br />
-                                We are a full service jewelry store offering diamonds and gemstones, remounts, gold and silver and expert repair.</p> -->
 
                                <nav class="nav">
                                 <a href="#about" id="about-link" class="skel-layers-ignoreHref">
@@ -154,44 +144,17 @@
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
                                         <a class="image fit"><img src="images/selected-images/stack-of-rings.jpg" alt="" /></a>
-                                        <!-- <header>
-                                            <h3>1</h3>
-                                        </header> -->
                                     </article>
-                                    <!-- <article class="item">
-                                        <a class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-                                        <header>
-                                            <h3>2</h3>
-                                        </header>
-                                    </article> -->
                                 </div>
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
                                         <a class="image fit"><img src="images/selected-images/clover-necklace.jpg" alt="" /></a>
-                                        <!-- <header>
-                                            <h3>3</h3>
-                                        </header> -->
                                     </article>
-                                    <!-- <article class="item">
-                                        <a class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-                                        <header>
-                                            <h3>4</h3>
-                                        </header>
-                                    </article> -->
                                 </div>
                                 <div class="4u$ 12u$(mobile)">
                                     <article class="item">
                                         <a class="image fit"><img src="images/selected-images/many-bracelets.jpeg" alt="" /></a>
-                                        <!-- <header>
-                                            <h3>Dolor Penatibus</h3>
-                                        </header> -->
                                     </article>
-                                    <!-- <article class="item">
-                                        <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-                                        <header>
-                                            <h3>Orci Convallis</h3>
-                                        </header>
-                                    </article> -->
                                 </div>
                             </div>
 
@@ -213,44 +176,17 @@
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
                                         <a class="image fit"><img src="images/selected-images/hurricane-ring.jpeg" alt="" /></a>
-                                        <!-- <header>
-                                            <h3>1</h3>
-                                        </header> -->
                                     </article>
-                                    <!-- <article class="item">
-                                        <a class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-                                        <header>
-                                            <h3>2</h3>
-                                        </header>
-                                    </article> -->
                                 </div>
                                 <div class="4u 12u$(mobile)">
                                     <article class="item">
                                         <a class="image fit"><img src="images/selected-images/jelly-bean-ring.jpg" alt="" /></a>
-                                        <!-- <header>
-                                            <h3>3</h3>
-                                        </header> -->
                                     </article>
-                                    <!-- <article class="item">
-                                        <a class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-                                        <header>
-                                            <h3>4</h3>
-                                        </header>
-                                    </article> -->
                                 </div>
                                 <div class="4u$ 12u$(mobile)">
                                     <article class="item">
                                         <a class="image fit"><img src="images/selected-images/large-diamond.jpeg" alt="" /></a>
-                                        <!-- <header>
-                                            <h3>Dolor Penatibus</h3>
-                                        </header> -->
                                     </article>
-                                    <!-- <article class="item">
-                                        <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-                                        <header>
-                                            <h3>Orci Convallis</h3>
-                                        </header>
-                                    </article> -->
                                 </div>
                             </div>
                         </div>
@@ -352,7 +288,7 @@
 
                 <!-- Copyright -->
                     <ul class="copyright">
-                        <li>&copy; Anne-Marie's Fine Jewelry. All rights reserved.</li><!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+                        <li>&copy; Anne-Marie's Fine Jewelry. All rights reserved.</li>
                     </ul>
 
             </div>
