bridal cover image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -141,7 +141,7 @@
             <header>
               <h2 class="different-font">Bridal</h2>
             </header>
-            <a href="#" class="image featured"><img src="images/selected-images/double-band-ring.jpg" alt="" /></a>
+            <a href="#" class="image featured"><img src="images/selected-images/4-rings.png" alt="" /></a>
             <p>
               We offer a large variety of engagement rings and wedding bands.  Check out our sneak peek of photos then stop in today to view our extensive collection!
             </p>
