--- a/views/index.ejs
+++ b/views/index.ejs
@@ -174,7 +174,7 @@
             <div class="row">
               <div class="6u 12u$(mobile)">
                 <article class="item">
-                  <a href="https://www.gabrielny.com/" target="_blank" class="image fit"><img src="images/designers/gabriel.jpg" alt="" /></a>
+                  <a href="https://www.gabrielny.com/" target="_blank" class="image fit"><img src="images/designers/gabrielcologo.png" alt="" /></a>
                   <header>
                     <h3>Established in 1989 in New York City</h3>
                   </header>
