--- a/views/index.ejs
+++ b/views/index.ejs
@@ -267,6 +267,6 @@
       <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
       <script src="assets/js/main.js"></script>
       <script src="assets/js/sparkley.js"></script>
-      <script src="assets/js/jquery.scrollTo.min.js"></script>
+      <!-- <script src="assets/js/jquery.scrollTo.min.js"></script> -->
   </body>
 </html>
