--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,12 +86,12 @@
                 Anne-Marie's Fine Jewelry was established in 2001. We are a full service jewelry store offering diamonds and gemstones, remounts, gold and silver, and expert repair. Our knowledgeable sales staff provides friendly customer service. We pride ourselves in being your neighborhood jewelry store, a store that truly cares about each of our customers. Check us out on <b><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" target="_blank">Facebook</a></b>.
             </p>
             <div class="row">
-              <div class="6u 12u$(mobile)">
+              <div class="col-sm-6 col-xs-12">
                 <header class="mb0">
                   <h3>Hours</h3>
                 </header>
                 <div class="row">
-                  <div class="6u">
+                  <div class="col-sm-6">
                     <p class="hours-right">Sunday:</p>
                     <p class="hours-right">Monday:</p>
                     <p class="hours-right">Tuesday:</p>
@@ -100,7 +100,7 @@
                     <p class="hours-right">Friday:</p>
                     <p class="hours-right">Saturday:</p>
                   </div>
-                  <div class="6u">
+                  <div class="col-sm-6">
                     <p class="hours-left"><b>Closed</b></p>
                     <p class="hours-left"><b>Closed</b></p>
                     <p class="hours-left"><b>10:30am - 5:30pm</b></p>
@@ -111,22 +111,22 @@
                   </div>
                 </div>
               </div>
-              <div class="6u 12u$(mobile)">
+              <div class="col-sm-6 col-xs-12">
                 <iframe width="100%" height="295px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/directions?origin=My%20Location&destination=4917%20W.%20Tuscarawas%20St.%20Canton%2C%20Ohio%2044708&key=AIzaSyDeqBdXGEaIqpEwlo9p1RcoanitC9Bq_Zc" allowfullscreen></iframe>
               </div>
             </div>
             <div class="row">
-              <div class="4u 12u$(mobile)">
+              <div class="col-sm-4 col-xs-12">
                 <article class="item">
                   <a class="image fit"><img src="images/selected-images/stack-of-rings.jpg" alt="" /></a>
                 </article>
               </div>
-              <div class="4u 12u$(mobile)">
+              <div class="col-sm-4 col-xs-12">
                 <article class="item">
                   <a class="image fit"><img src="images/selected-images/clover-necklace.jpg" alt="" /></a>
                 </article>
               </div>
-              <div class="4u$ 12u$(mobile)">
+              <div class="col-sm-4 col-xs-12">
                 <article class="item">
                   <a class="image fit"><img src="images/selected-images/many-bracelets.jpeg" alt="" /></a>
                 </article>
@@ -146,17 +146,17 @@
               We offer a large variety of engagement rings and wedding bands.  Check out our sneak peek of photos then stop in today to view our extensive collection!
             </p>
             <div class="row">
-              <div class="4u 12u$(mobile)">
+              <div class="col-sm-4 col-xs-12">
                 <article class="item">
                   <a class="image fit"><img src="images/selected-images/hurricane-ring.jpeg" alt="" /></a>
                 </article>
               </div>
-              <div class="4u 12u$(mobile)">
+              <div class="col-sm-4 col-xs-12">
                 <article class="item">
                   <a class="image fit"><img src="images/selected-images/jelly-bean-ring.jpg" alt="" /></a>
                 </article>
               </div>
-              <div class="4u$ 12u$(mobile)">
+              <div class="col-sm-4 col-xs-12">
                 <article class="item">
                   <a class="image fit"><img src="images/selected-images/large-diamond.jpeg" alt="" /></a>
                 </article>
@@ -172,7 +172,7 @@
               <h2>Featured Designers</h2>
             </header>
             <div class="row">
-              <div class="6u 12u$(mobile)">
+              <div class="col-sm-6 col-xs-12">
                 <article class="item">
                   <a href="https://www.gabrielny.com/" target="_blank" class="image fit"><img src="images/designers/gabrielcologo.png" alt="" /></a>
                   <header>
@@ -192,7 +192,7 @@
                   </header>
                 </article>
               </div>
-              <div class="6u 12u$(mobile)">
+              <div class="col-sm-6 col-xs-12">
                 <article class="item">
                   <a href="http://www.gemeast.com/" target="_blank" class="image fit"><img src="images/designers/gemeast.png" alt="" /></a>
                   <header>
@@ -236,8 +236,8 @@
               </p>
               <form method="post" action="#">
                 <div class="row">
-                  <div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
-                  <div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
+                  <div class="col-sm-6 col-xs-12"><input type="text" name="name" placeholder="Name" /></div>
+                  <div class="col-sm-6$ col-xs-12"><input type="text" name="email" placeholder="Email" /></div>
                   <div class="12u$">
                     <textarea name="message" placeholder="Message"></textarea>
                   </div>
