--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <head>
     <title>Anne-Marie's Fine Jewelry</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link href='https://fonts.googleapis.com/css?family=Ruthie' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -40,7 +40,7 @@
                <li><a href="http://foobar.tld" id="foobar-link" class="icon fa-whatever-icon-you-want"><span class="label">Foobar</span></a></li>
           -->
           <ul>
-            <li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
+            <li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home Page</span></a></li>
             <li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-info-circle">About</span></a></li>
             <li><a href="#bridal" id="bridal-link" class="skel-layers-ignoreHref"><span class="icon fa-diamond">Bridal</span></a></li>
             <li><a href="#designers" id="designers-link" class="skel-layers-ignoreHref"><span class="icon fa-users">Designers</span></a></li>
