maybe removing vh will help?

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -8,7 +8,7 @@ body {
 
 #main > section.one {
   background-image: url("../../images/horizontal_diamonds.png");
-  height: 100vh;
+  height: 50px;
 }
 
 header.cover {
