--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -85,7 +85,7 @@
 		width: 1400px;
 	}
 
-	@media only screen and (min-width: 961px) and (max-width: 1880px) {
+	@media screen and (min-width: 961px) and (max-width: 1880px) {
 
 		.container.\31 25\25 {
 			width: 100%;
@@ -111,7 +111,7 @@
 
 	}
 
-	@media only screen and (min-width: 961px) and (max-width: 1620px) {
+	@media screen and (min-width: 961px) and (max-width: 1620px) {
 
 		.container.\31 25\25 {
 			width: 100%;
@@ -137,7 +137,7 @@
 
 	}
 
-	@media only screen and (min-width: 961px) and (max-width: 1320px) {
+	@media screen and (min-width: 961px) and (max-width: 1320px) {
 
 		.container.\31 25\25 {
 			width: 100%;
@@ -163,7 +163,7 @@
 
 	}
 
-	@media only screen and (max-width: 960px) {
+	@media screen and (max-width: 960px) {
 
 		.container.\31 25\25 {
 			width: 100%;
@@ -189,7 +189,7 @@
 
 	}
 
-	@media only screen and (max-width: 736px) {
+	@media screen and (max-width: 736px) {
 
 		.container.\31 25\25 {
 			width: 100%;
@@ -473,7 +473,7 @@
 		margin-left: 8.33333%;
 	}
 
-	@media only screen and (min-width: 961px) and (max-width: 1880px) {
+	@media screen and (min-width: 961px) and (max-width: 1880px) {
 
 		.row > * {
 			padding: 40px 0 0 40px;
@@ -688,7 +688,7 @@
 
 	}
 
-	@media only screen and (min-width: 961px) and (max-width: 1620px) {
+	@media screen and (min-width: 961px) and (max-width: 1620px) {
 
 		.row > * {
 			padding: 40px 0 0 40px;
@@ -903,7 +903,7 @@
 
 	}
 
-	@media only screen and (min-width: 961px) and (max-width: 1320px) {
+	@media screen and (min-width: 961px) and (max-width: 1320px) {
 
 		.row > * {
 			padding: 20px 0 0 20px;
@@ -1118,7 +1118,7 @@
 
 	}
 
-	@media only screen and (max-width: 960px) {
+	@media screen and (max-width: 960px) {
 
 		.row > * {
 			padding: 20px 0 0 20px;
@@ -1333,7 +1333,7 @@
 
 	}
 
-	@media only screen and (max-width: 736px) {
+	@media screen and (max-width: 736px) {
 
 		.row > * {
 			padding: 20px 0 0 20px;
@@ -2179,7 +2179,7 @@
 
 /* Wide */
 
-	@media only screen and (min-width: 961px) and (max-width: 1880px) {
+	@media screen and (min-width: 961px) and (max-width: 1880px) {
 
 		/* Basic */
 
@@ -2209,7 +2209,7 @@
 
 /* Normal */
 
-	@media only screen and (min-width: 961px) and (max-width: 1620px) {
+	@media screen and (min-width: 961px) and (max-width: 1620px) {
 
 		/* Main */
 
@@ -2225,7 +2225,7 @@
 
 /* Narrow */
 
-	@media only screen and (min-width: 961px) and (max-width: 1320px) {
+	@media screen and (min-width: 961px) and (max-width: 1320px) {
 
 		/* Basic */
 
@@ -2296,7 +2296,7 @@
 		display: none;
 	}
 
-	@media only screen and (max-width: 960px) {
+	@media screen and (max-width: 960px) {
 
 		/* Basic */
 
@@ -2482,7 +2482,7 @@
 
 /* Mobile */
 
-	@media only screen and (max-width: 736px) {
+	@media screen and (max-width: 736px) {
 
 		/* Basic */
 
