--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
   <head>
     <title>Anne-Marie's Fine Jewelry</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <meta name="viewport" content="width=device-width"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link href='https://fonts.googleapis.com/css?family=Ruthie' rel='stylesheet' type='text/css'>
