--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,6 @@
   <head>
     <title>Anne-Marie's Fine Jewelry</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-<!-- <meta name="viewport" content="width=device-width"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link href='https://fonts.googleapis.com/css?family=Ruthie' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -18,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/custom.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <!-- Header -->
