--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,8 +90,8 @@
                 <header class="mb0">
                   <h3>Hours</h3>
                 </header>
-                <div class="row">
-                  <div class="6u">
+                <div class="row hours-wrapper">
+                  <div class="2u">
                     <p class="hours-right">Sunday:</p>
                     <p class="hours-right">Monday:</p>
                     <p class="hours-right">Tuesday:</p>
@@ -100,7 +100,7 @@
                     <p class="hours-right">Friday:</p>
                     <p class="hours-right">Saturday:</p>
                   </div>
-                  <div class="6u">
+                  <div class="10u">
                     <p class="hours-left"><b>Closed</b></p>
                     <p class="hours-left"><b>Closed</b></p>
                     <p class="hours-left"><b>10:30am - 5:30pm</b></p>
