--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -64,13 +64,19 @@ header.cover {
       box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
 }
 
+.hours-wrapper {
+  max-width: 410px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .hours-right {
-  text-align: right;
+  text-align: left;
   margin-bottom: 0px;
 }
 
 .hours-left {
-  text-align: left;
+  text-align: right;
   margin-bottom: 0px;
 }
 
