--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
                 Anne-Marie's Fine Jewelry was established in 2001. We are a full service jewelry store offering diamonds and gemstones, remounts, gold and silver, and expert repair. Our knowledgeable sales staff provides friendly customer service. We pride ourselves in being your neighborhood jewelry store, a store that truly cares about each of our customers. Check us out on <b><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" target="_blank">Facebook</a></b>.
                 <br>
                 <span class="text-center">
-                  <a href="tel:1-330-479-9088">(330) 479-9088</a>
+                  <a href="tel:330-479-9088">(330) 479-9088</a>
                 </span>
             </p>
 
