updated About words

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
               <h2>About</h2>
             </header>
             <p>
-                Anne-Marie's Fine Jewelry was established in 2001. We are a full service jewelry store offering diamonds and gemstones, remounts, gold and silver, and expert repair. Our knowledgeable sales staff provides friendly customer service. We pride ourselves in being your neighborhood jewelry store, a store that truly cares about each of our customers. Check us out on <b><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" target="_blank">Facebook</a></b>.
+                Anne-Marie's Fine Jewelry was established in 1998. We are a full-service jewelry store offering diamonds, gemstones, gold and silver. We proudly carry engagement rings, baby and other personalized/engraved jewelry! Our knowledgeable sales staff provides friendly customer service, expert repair and remounts. We pride ourselves in being your neighborhood jewelry store in the Canton/Massilon area -- a store that truly cares about each of our customers. Check us out on <b><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" target="_blank">Facebook</a></b>.
                 <br>
                 <span class="text-center">
                   <a href="tel:330-479-9088">(330) 479-9088</a>
