--- a/views/index.ejs
+++ b/views/index.ejs
@@ -181,7 +181,13 @@
             <div class="row">
               <div class="6u 12u$(mobile)">
                 <article class="item">
-                  <a href="https://www.gabrielny.com/" target="_blank" class="image fit"><img src="images/designers/gabrielcologo.png" alt="" /></a>
+                  <a
+                    style="cursor: pointer;"
+                    class="image fit"
+                    type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+                  >
+                    <img src="images/designers/gabrielcologo.png" alt="" />
+                  </a>
                   <header>
                     <h3>Established in 1989 in New York City</h3>
                   </header>
@@ -207,6 +213,23 @@
                   </header>
                 </article>
               </div>
+            </div>
+          </div>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span style="color: black;" aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <script src="//embed.gabrielny.com/eshop.js?key=6cc9ba09-ec7b-4cd1-a383-a769c4e1816f&width=100%&height=500&division=bridal&no_chat=1"></script>
+                </div>
+              </div>
+
             </div>
           </div>
         </section>
@@ -254,9 +277,11 @@
       <script src="assets/js/jquery.scrollzer.min.js"></script>
       <script src="assets/js/skel.min.js"></script>
       <script src="assets/js/util.js"></script>
+      <script src="assets/js/bootstrap.min.js"></script>
       <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
       <script src="assets/js/main.js"></script>
       <script src="assets/js/sparkley.js"></script>
+      <!-- <script src="//embed.gabrielny.com/eshop.js?key=6cc9ba09-ec7b-4cd1-a383-a769c4e1816f&width=100%&height=500&division=bridal&no_chat=1"></script> -->
       <!-- <script src="assets/js/jquery.scrollTo.min.js"></script> -->
   </body>
 </html>
