--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,8 +50,15 @@
       </div>
       <div class="bottom">
         <!-- Social Icons -->
-        <ul class="icons">
+        <ul class="icons hidden-xs">
           <li class="facebook-icon"><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" target="_blank" class="icon fa-facebook-official fa-lg"><span class="label">Facebook</span></a></li>
+          <li class="instagram-icon"><a href="https://www.instagram.com/_annemariesjewelry/" target="_blank" class="icon fa-instagram fa-lg"><span class="label">Instagram</span></a></li>
+          <li class="pinterest-icon"><a href="https://www.pinterest.com/annemariesfinejewelrygifts/" target="_blank" class="icon fa-pinterest-square fa-lg"><span class="label">Pinterest</span></a></li>
+        </ul>
+        <ul class="icons visible-xs">
+          <li class="facebook-icon"><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" target="_blank" class="icon fa-facebook-official fa-lg"><span class="label">Facebook</span></a></li>
+          <li class="instagram-icon"><a href="https://www.instagram.com/_annemariesjewelry/" target="_blank" class="icon fa-instagram fa-lg"><span class="label">Instagram</span></a></li>
+          <li class="pinterest-icon"><a href="https://www.pinterest.com/annemariesfinejewelrygifts/" target="_blank" class="icon fa-pinterest-square fa-lg"><span class="label">Pinterest</span></a></li>
         </ul>
       </div>
       <img src="images/lee.png" class="lee hidden-xs img">
@@ -85,7 +92,10 @@
             <p>
                 Anne-Marie's Fine Jewelry was established in 1998. We are a full-service jewelry store offering diamonds, gemstones, gold and silver. We proudly carry engagement rings, baby and other personalized/engraved jewelry! Our knowledgeable sales staff provides friendly customer service, expert repair and remounts. We pride ourselves in being your neighborhood jewelry store in the Canton/Massillon area -- a store that truly cares about each of our customers.
                 <br>
-                Check us out on <b><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" target="_blank">Facebook</a></b>.
+                Check us out on
+                <b><a href="https://www.facebook.com/Anne-Maries-Fine-Jewelry-Gifts-204639168988/" style="color: #3b5998" target="_blank">Facebook</a></b>,
+                <b><a href="https://www.instagram.com/_annemariesjewelry/" style="color: #8a3ab9" target="_blank">Instagram</a></b> and
+                <b><a href="https://www.pinterest.com/annemariesfinejewelrygifts/" style="color: #c8232c" target="_blank">Pinterest</a></b>.
                 <br>
                 <span class="text-center">
                   <a href="tel:330-479-9088">(330) 479-9088</a>
